[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/lobbyHandler.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Menu/MenuHandler.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.254902, 0.254902, 0.254902, 0.760784 )
shadow_size = 3

[node name="Node" type="Node"]

[node name="MenuHandler" type="Node" parent="." groups=["Menu"]]
script = ExtResource( 2 )

[node name="InitialMenu" type="Control" parent="MenuHandler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 50.0

[node name="ColorRect" type="ColorRect" parent="MenuHandler/InitialMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -75.0
margin_right = 100.0
margin_bottom = 75.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Game Title" type="Label" parent="MenuHandler/InitialMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -60.0
margin_right = 47.5
margin_bottom = -46.0
text = "Zombie Waves"
align = 1
valign = 1

[node name="HostButton" type="Button" parent="MenuHandler/InitialMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -23.0
margin_right = -20.0
margin_bottom = -3.0
text = "Host server"

[node name="ConnectButton" type="Button" parent="MenuHandler/InitialMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 18.0
margin_right = -20.0
margin_bottom = 38.0
text = "Connect to Server"

[node name="PlayerMenu" type="Control" parent="MenuHandler"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0

[node name="ColorRect" type="ColorRect" parent="MenuHandler/PlayerMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -75.0
margin_right = 100.0
margin_bottom = 75.0
color = Color( 0, 0, 0, 0.501961 )

[node name="NameInput" type="LineEdit" parent="MenuHandler/PlayerMenu"]
anchor_left = 0.18
anchor_right = 0.82
margin_left = -29.0
margin_top = 44.0
margin_right = 29.0
margin_bottom = 68.0
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
placeholder_text = "Nome"
placeholder_alpha = 0.5

[node name="PlayButton" type="Button" parent="MenuHandler/PlayerMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = 50.0
margin_right = 21.0
margin_bottom = 70.0
text = "Jogar"

[node name="SelectFacButton" type="OptionButton" parent="MenuHandler/PlayerMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 23.0
margin_right = 56.0
margin_bottom = 43.0
text = "Selecione a facção"

[node name="Game Title" type="Label" parent="MenuHandler/PlayerMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -60.0
margin_right = 47.5
margin_bottom = -46.0
text = "Zombie Waves"
align = 1
valign = 1

[node name="IpInput" type="LineEdit" parent="MenuHandler/PlayerMenu"]
anchor_left = 0.18
anchor_right = 0.82
margin_left = -29.0
margin_top = 11.0
margin_right = 29.0
margin_bottom = 35.0
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
placeholder_text = "Ip do servidor"
placeholder_alpha = 0.5

[node name="MultiplayerLobby" type="Control" parent="MenuHandler" groups=["MultiplayerMenu"]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -125.0
margin_right = 150.0
margin_bottom = 125.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="MenuHandler/MultiplayerLobby"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="PlayerListBackground" type="ColorRect" parent="MenuHandler/MultiplayerLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -75.0
margin_right = 150.0
margin_bottom = 75.0
color = Color( 0, 0, 0, 0.501961 )

[node name="PlayerList" type="VBoxContainer" parent="MenuHandler/MultiplayerLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -75.0
margin_right = 150.0
margin_bottom = 75.0

[node name="ReadyButton" type="Button" parent="MenuHandler/MultiplayerLobby"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -26.0
margin_right = -6.0
margin_bottom = -6.0
text = "Pronto"

[node name="GameStatus" type="Label" parent="MenuHandler/MultiplayerLobby"]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -85, 140 )
text = "Aguardando jogadores..."
align = 1
valign = 1
autowrap = true

[node name="PlayersCountsTitle" type="Label" parent="MenuHandler/MultiplayerLobby"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -47.0
margin_right = 300.0
margin_bottom = -33.0
rect_pivot_offset = Vector2( -85, 140 )
text = "Prontos  /  Conectados"
align = 1
valign = 1
autowrap = true

[node name="ReadyPlayersCount" type="Label" parent="MenuHandler/MultiplayerLobby"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 92.0
margin_top = -30.0
margin_right = 110.0
rect_pivot_offset = Vector2( -85, 140 )
text = "0"
align = 1
valign = 1
autowrap = true

[node name="ConnectedPlayersCount" type="Label" parent="MenuHandler/MultiplayerLobby"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 173.0
margin_top = -30.0
margin_right = 191.0
rect_pivot_offset = Vector2( -85, 140 )
text = "0"
align = 1
valign = 1
autowrap = true

[node name="Separator" type="Label" parent="MenuHandler/MultiplayerLobby"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -30.0
margin_right = -2.0
rect_pivot_offset = Vector2( -85, 140 )
text = "/"
align = 1
valign = 1
autowrap = true

[node name="GameTitle" type="Label" parent="MenuHandler/MultiplayerLobby"]
anchor_right = 1.0
margin_top = 4.0
margin_bottom = 18.0
text = "Zombie Waves"
align = 1
valign = 1

[connection signal="pressed" from="MenuHandler/InitialMenu/HostButton" to="MenuHandler" method="_on_HostButton_pressed"]
[connection signal="pressed" from="MenuHandler/InitialMenu/ConnectButton" to="MenuHandler" method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="MenuHandler/PlayerMenu/PlayButton" to="MenuHandler" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuHandler/MultiplayerLobby/ReadyButton" to="MenuHandler" method="_on_ReadyButton_pressed"]
